--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,22 +1,47 @@
 /*contacto */
-.contacto__form {
-    background-color: darkgrey;
-    color: white;
+
+.contactoForm{
+    color:#ffffff;
+    background-size: cover;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0; 
+    background-image: url(../images/constelaciones.jpeg);
+    opacity: .6;
     border-radius: 0.5em;
     line-height: 2em;
     padding: 0.3em;
     text-transform: uppercase;
-    font-size: 0.9em;
-    
-}
+    font-size: 0.9em;}
+  
+  .contactoForm::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height:100%;
+    background-color:#000000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: .7;
+    z-index: 0;
+  }
+  .contactoForm > * {
+    z-index: 10;
+    position: relative;
+  }
+
+
 label {
     padding: 0.5em;
     width: 7em;
 }
-.contacto__input {
+.contactoForm__input {
     width: 20em;
 }
-.contacto__btn {
+.contactoForm__btn {
     background-color: $importantText;
     color: white;
     border-radius: 1em;
@@ -27,7 +52,7 @@ label {
     display: block;
     margin: 0 auto;
 }
-.contacto__text {
+.contactoText {
     color: white;
     font-size: 1.5em;
     font-weight: 500;
@@ -35,36 +60,36 @@ label {
     margin-top: 1em; 
     text-shadow: 2px 2px 5px black;
 }
-.contacto__redes {
+.contactoCard {
     list-style: none;
     font-family: "Source Sans Pro", sans-serif;
     font-weight: 600;
-    background-color: rgb(246, 240, 240);
+    background-color: $boxBackground;
     width: 24em;
     margin-left: 0.5em;
     margin-right: 0.5em;
 }
-.contacto__redes a{
+.contactoCard a{
     text-decoration: none;
     color: $importantText;
     text-shadow: 2px 2px 5px rgb(128, 124, 124);
     margin: 0.4em;
     padding: 0.5em;  
 }
-.contacto__redes--title {
+.contactoCard__title {
     text-transform: uppercase;
+    font-size: 1.2em;
     color: $importantText;
-    text-shadow: 2px 2px 2px rgb(128, 124, 124);   
+    
 }
-.contacto__redes--text {
+.contactoCard__text {
     margin-left: 2.5em;
     padding-bottom: 1em;  
-    color: white; 
-    text-shadow: 2px 2px 2px rgb(95, 92, 92);  
+    color: #3d3d3d; 
 }
 
 @media(min-width:700px) {
-.contacto__form {
+.contactoForm {
     padding: 2em;
     margin: 3em;
     margin-left: 6em;
@@ -73,29 +98,29 @@ label {
     line-height: 2em;
     
 }
-.contacto__formtitle {
+.contactoForm__title {
     font-size: 2em;
 }
-.contacto__item{
+.contactoForm__item{
     margin: 1em;
 }
-.contacto__input {
+.contactoForm__input {
     margin: 0.5em;
     width: 20em;
     padding: 0.1em;       
 }
-.contacto__btn {
+.contactoForm__btn {
     margin-left: 8em;  
 }
-.contacto__text {
+.contactoText {
     font-size: 2em;
     margin-top: 2em; 
 }
-.contacto__redes {
+.contactoCard {
     width: 24em;
     margin-left: 7em;
 }
-.contacto__redes--text {
+.contactoCard__text {
     margin-left: 2.5em;
     padding-bottom: 1em;   
 }
