--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,78 +1,83 @@
 /*INDEX CAROUSEL MOBILE*/
-.carousel-item {
-  background-color:#202020;
-  height: 15em;
-  position: relative;
-  color: white;
-  background-position: center;
-  background-size: cover;
-}
-.carousel__overlay {
-  background-image: url(../images/scale.jpeg);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top:0;
-  opacity: 0.3;
-  background-position: center;
-  background-size: cover;
-}
-.carousel__overlay2 {
-  background-image: url(../images/justice.jpeg);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top:0;
-  opacity: 0.2;
-  background-position: center;
-  background-size: cover;
-}
-.carousel__overlay3 {
-  background-image: url(../images/client.jpeg);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top:0;
-  opacity: 0.2;
-  background-position: center;
-  background-size: cover;
+.carousel {
+  margin: 3em 0 3em 0;
+
+  &-item {
+    background-color:#202020;
+    height: 15em;
+    position: relative;
+    color: white;
+    background-position: center;
+    background-size: cover;
+  }
+  &__overlay {
+    background-image: url(../images/scale.jpeg);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top:0;
+    opacity: 0.3;
+    background-position: center;
+    background-size: cover;
+  }
+  &__overlay2 {
+    background-image: url(../images/justice.jpeg);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top:0;
+    opacity: 0.2;
+    background-position: center;
+    background-size: cover;
+  }
+  &__overlay3 {
+    background-image: url(../images/client.jpeg);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top:0;
+    opacity: 0.2;
+    background-position: center;
+    background-size: cover;
+  }
+  &__text {
+    font-size: 0.7em;
+  }
+  &__text--title {
+    font-family:"Source Serif Pro", sans-serif;
+    text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
+    text-transform: uppercase;
+    font-size: 1.3em;
+    margin: 0;
+    padding: 0;
+  }
+  &__text--prioridad {
+    font-family:"Source Serif Pro", sans-serif;
+    text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
+    text-transform: uppercase;
+    font-size: 1.3em;
+    font-weight: 600;
+  }
 }
 
-.carousel__text--title {
+h1 {
   font-family:"Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
   text-transform: uppercase;
-  font-size: 1.3em;
-  margin: 0;
-  padding: 0;
+  font-size: 1.7em;
+  margin:1.5em;
 }
 
-.carousel__text--prioridad {
-  font-family:"Source Serif Pro", sans-serif;
-  text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
-  text-transform: uppercase;
-  font-size: 1.3em;
-  font-weight: 600;
-}
-
-.carousel__text {
-  font-size: 0.7em;
-}
-h5 {
+h2 {
   font-family:"Source Serif Pro", sans-serif;
   text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
   text-transform: uppercase;
   font-size: 2em;
 }
-h1 {
-  font-family:"Source Sans Pro", sans-serif;
-  text-shadow: 1px 1px 1.5px rgb(73, 69, 69);
-  text-transform: uppercase;
-  font-size: smaller;
-}
+
 h3 {
   font-family: 'Source Serif Pro', serif;
   text-transform: uppercase;
@@ -87,17 +92,17 @@ h6 {
 
 /*INDEX CAROUSEL ESCRITORIO*/
 @media(min-width:700px) {
-  .carousel__text--title {
-    font-size: 2.2em;
-    margin: 0;
-    padding: 0;
-  }
-  .carousel__text--prioridad {
-    font-size: 2.4em;
-    letter-spacing: 0.05em;
-  }
   .carousel__text {
     font-size: 1.2em;
+    &--prioridad {
+      font-size: 2.4em;
+      letter-spacing: 0.05em;
+    }
+    &--title {
+      font-size: 2.2em;
+      margin: 0;
+      padding: 0;
+    }
   }
 }
 /*INDEX PRACTICAS MOBILE yescritorio*/
@@ -107,6 +112,11 @@ h6 {
   margin: 3em;
   padding-top: 3em;  
 }
+
+.practicas__btn:hover {
+  transform: scale(1.20);
+}
+
 
 .practicas__image {
   height: 3em;
