--- a/scss/_profesionales.scss
+++ b/scss/_profesionales.scss
@@ -1,36 +1,42 @@
 
 /*PROFESIONALES*/
-.profesionales__title {
-   text-align: center;
-}
-.profesionales__image {
-   width: 12em;
-   height: 15em;
-   border-radius: 0.4em;
-   margin: 2em;
-   box-shadow:  3px 3px 10px rgb(241, 238, 238);
-}
-.profesionales__btn {
-   @include buttons ($importantText,white, none,0.5em,uppercase,600);
-   text-decoration: none;    
-   padding: 0.3em;
-   margin-top: 1.5em;
-   margin: 1em;
-   padding: 1em;
-}
-.profesionales__redes a {
-   text-decoration: none;
-   background-color: $importantText;
-   color: white;
-   margin: 0.2em;
-   padding: 1em;
-}
-.profesionales__box {
-   background-color: rgb(255, 251, 251);
-   margin: 1em;
-   padding: 1em;
-   border-radius: 0.5em;
-   box-shadow:  3px 3px 10px rgb(241, 238, 238);
+
+.profesionales {
+   background-color: white;
+
+   &__title {
+      text-align: center;
+   }
+   &__image{
+      width: 12em;
+      height: 15em;
+      border-radius: 0.4em;
+      margin: 2em;
+      box-shadow:  3px 3px 10px rgb(241, 238, 238);
+   }
+   &__btn {
+      @include buttons ($importantText,white, none,0.5em,uppercase,600);
+      text-decoration: none;    
+      padding: 0.3em;
+      margin-top: 1.5em;
+      margin: 1em;
+      padding: 1em;
+   }
+   &__redes a {
+      text-decoration: none;
+      background-color: $importantText;
+      color: white;
+      padding: 1em;
+      padding-bottom: 2em;
+      justify-content: center;
+   }
+   &__box {
+      background-color: rgb(255, 251, 251);
+      margin: 1em;
+      padding: 1em;
+      border-radius: 0.5em;
+      box-shadow:  3px 3px 10px rgb(241, 238, 238);
+   }
 }
 
 @media(min-width:700px) {
@@ -38,7 +44,7 @@
       margin: 1em;
    }
    .profesionales__btn{
-      @include buttons ($importantText,white, none,0.5em,uppercase,600)
+      @include buttons ($importantText,white, none, 0.7em ,uppercase,600)
    };
 }
 
